interface app is build as is working, moving to link app
